--- a/composer.json
+++ b/composer.json
@@ -12,16 +12,9 @@
         "php": "^7.4|^8.0",
         "firebase/php-jwt": "^5.5",
         "guzzlehttp/guzzle": "^7.4",
-        "illuminate/redis": "^8.78",
         "laravel/lumen-framework": "^8.3.1",
         "paragonie/sodium_compat": "^1.17",
-        "phabloraylan/lumen-middleware-trim-or-convert-strings": "^1.0",
-        "predis/predis": "^1.1",
-        "promphp/prometheus_client_php": "^2.4",
-        "spatie/laravel-fractal": "^5.8",
-        "yajra/laravel-oci8": "^8",
-        "globalhitss/common": "^1",
-        "globalhitss/pgs": "^2"
+        "phabloraylan/lumen-middleware-trim-or-convert-strings": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -51,17 +44,5 @@
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ]
-    },
-    "repositories": [
-        {
-            "name": "globalhitss/common",
-            "type": "vcs",
-            "url": "git@git.dlatv.net:PAGOS/microservices/globalhitss-common.git"
-        },
-        {
-            "name": "globalhitss/pgs",
-            "type": "vcs",
-            "url": "git@git.dlatv.net:PAGOS/microservices/globalhitss-pgs.git"
-        }
-    ]
+    }
 }
